Fixed URL line wrapping

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ article img {
 
 article a {
 	position: relative;
+	white-space: nowrap;
 }
 
 article a::after {
